# learning-rust

./: .gitignore  Cargo.toml  README.md
arrays/src/: main.rs
buildrs/: Cargo.toml  build.rs
buildrs/src/: main.rs
channels/: Cargo.toml
channels/src/: main.rs
closures/src/: main.rs
enums/src/: main.rs
errorhandle/src/: main.rs
files/: Cargo.toml  out.txt  out2.txt  out3.txt
files/src/: main.rs
functions/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
grpcs/tonics-demo1/: Cargo.toml  build.rs
grpcs/tonics-demo1/proto/: User.proto  User2.proto
grpcs/tonics-demo1/src/: client.rs  server.rs
grpcs/tonics-demo2/: Cargo.toml  build.rs
grpcs/tonics-demo2/src/: bookstore_impl.rs  main.rs  main2.rs
hashmaps/: Cargo.toml
hashmaps/src/: main.rs
inherits/: Cargo.toml
inherits/src/: main.rs
macros/src/: main.rs
modules/: Cargo.toml
modules/mylib/src/: factory.rs
modules/src/: main.rs
modules2/src/: main.rs
modules3/src/: main.rs
modules3/src/com/: mod.rs
modules3/src/com/leotest/kafka/: controller.rs  dao.rs  mod.rs  model.rs  service.rs
modules4/: Cargo.toml
modules4/src/mlib/: mod.rs  translate.rs
modules4/src/mlib/music/: flac.rs  mod.rs  mp3.rs
multithread/src/: main.rs
ownerships/src/: main.rs  ownership1.rs  ownership2.rs
smartpointer/src/: main.rs
strings/src/: main.rs
structs/src/: main.rs
structures/src/: main.rs
tomldemo/: Cargo.toml
tomldemo/conf/: poem.toml
tomldemo/src/: conf.rs  conf2.rs  environment.rs  errorr.rs  main.rs
traits/src/: cells.rs  main.rs
traits/src/leotest/: mod.rs
traits/src/leotest/practise_trait_1/: mod.rs  model1.rs  model2.rs
variables/: Cargo.toml
variables/src/: main.rs
vecs/src/: main.rs
web-demo/actix-demo-1/: .env  Cargo.toml  mysql.sql
web-demo/actix-demo-1/src/: dao.rs  main.rs  model.rs
web-demo/rocket-demo/: Cargo.toml
web-demo/rocket-demo-2/: Cargo.toml
web-demo/rocket-demo-2/src/: main.rs
web-demo/rocket-demo-2/src/lib/: controller.rs  dto.rs  mod.rs
web-demo/rocket-demo/src/: main.rs
