[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fake = { version = "2.5.0", features = ['derive', 'chrono', 'http', 'uuid', 'rust_decimal', 'bigdecimal', 'random_color'] }
rand = "0.8.5"