[package]
name = "tonics-demo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
tonic-reflection = "0.4.0"
prost = "0.10.4"
tokio = {version = "1.20.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.7.2"
